--- a/front/front/index.html
+++ b/front/front/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>이혜민</title>
+    <link href="./public/index.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
-  <body></body>
+  <body>
+    <h1>hello world</h1>
+    <div class="addTodo">
+      <input type="text" />
+      <button>add</button>
+    </div>
+    <div class="todoList"></div>
+    <script src="./public/index.js"></script>
+  </body>
 </html>
