--- a/front/front/index.html
+++ b/front/front/index.html
@@ -10,8 +10,8 @@
   <body>
     <h1>hello world</h1>
     <div class="addTodo">
-      <input type="text" />
-      <button>add</button>
+      <input type="text" id="todo" />
+      <button onclick="addTodo()">작성</button>
     </div>
     <div class="todoList"></div>
     <script src="./public/index.js"></script>
